tests/parsing/smtlib/v2.6/errors/036_match_bad_match_case_1.expected
File "tests/parsing/smtlib/v2.6/errors/036_match_bad_match_case_1.smt2", line 3, character 34-35:
3 | (define-fun f ((x t)) t (match x (_)))
                                      ^
Error while parsing a list of match cases, read the reserved word '_',
      but expected a match case of the form "(pattern term)".
